syntax = "proto3";
import public "global_options.proto";

option go_package="./;proto";
option java_package = "org.liquibase.grpc.proto";
option java_multiple_files = true;
option java_outer_classname = "ChecksResetProto";

package liquibase.pro;

service ChecksResetService {
  rpc execute(Checks.ResetRequest) returns (Response) {}
}

/* Reset the customization options for a check to defaults */
message Checks {
  message ResetRequest {
    optional string auto_update = 1; // Allows automatic backup and updating of liquibase.checks.conf file when new quality checks are available, or for file format changes. Options: [on|off]
    string check_name = 2; // *required* Name of check to reset
    optional string checks_settings_file = 3; // Relative or fully qualified path to a configuration file for checks execution
    liquibase.GlobalOptions global_options = 4;
  }
}

message Response {
  string message = 1;
}
